Depsgraph crash when calling to_mesh() on a Curve object after clearing its parent #38337

Closed
opened 2014-01-23 15:55:37 +01:00 by Tom Edwards · 6 comments

System Information
Win7 x64, GTX560

Blender Version
Broken: c37e8ecc
Worked: 2.69

When clearing an object's parent, the scene's entire DAG is freed. Converting a Curve object to a mesh (via ob.to_mesh()) leads to an attempt to access the DAG without first checking whether it exists, which crashes Blender.

Callstack:

blender.exe!dag_find_node(DagForest * forest, void * fob) Line 992	C
blender.exe!DAG_get_eval_flags_for_object(Scene * scene, void * object) Line 2945	C
blender.exe!do_makeDispListCurveTypes(Scene * scene, Object * ob, ListBase * dispbase, DerivedMesh * * derivedFinal, int forRender, int forOrco, int renderResolution) Line 1571	C
blender.exe!BKE_displist_make_curveTypes_forRender(Scene * scene, Object * ob, ListBase * dispbase, DerivedMesh * * derivedFinal, int forOrco, int renderResolution) Line 1619	C
blender.exe!rna_Main_meshes_new_from_object(Main * bmain, ReportList * reports, Scene * sce, Object * ob, int apply_modifiers, int settings, int calc_tessface, int calc_undeformed) Line 318	C
blender.exe!rna_Object_to_mesh(Object * ob, ReportList * reports, Scene * sce, int apply_modifiers, int settings, int calc_tessface, int calc_undeformed) Line 121	C
blender.exe!Object_to_mesh_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 4780	C

Exact steps for others to reproduce the error

**System Information** Win7 x64, GTX560 **Blender Version** Broken: c37e8ecc Worked: 2.69 When clearing an object's parent, the scene's entire DAG is freed. Converting a Curve object to a mesh (via `ob.to_mesh()`) leads to an attempt to access the DAG without first checking whether it exists, which crashes Blender. Callstack: ``` blender.exe!dag_find_node(DagForest * forest, void * fob) Line 992 C blender.exe!DAG_get_eval_flags_for_object(Scene * scene, void * object) Line 2945 C blender.exe!do_makeDispListCurveTypes(Scene * scene, Object * ob, ListBase * dispbase, DerivedMesh * * derivedFinal, int forRender, int forOrco, int renderResolution) Line 1571 C blender.exe!BKE_displist_make_curveTypes_forRender(Scene * scene, Object * ob, ListBase * dispbase, DerivedMesh * * derivedFinal, int forOrco, int renderResolution) Line 1619 C blender.exe!rna_Main_meshes_new_from_object(Main * bmain, ReportList * reports, Scene * sce, Object * ob, int apply_modifiers, int settings, int calc_tessface, int calc_undeformed) Line 318 C blender.exe!rna_Object_to_mesh(Object * ob, ReportList * reports, Scene * sce, int apply_modifiers, int settings, int calc_tessface, int calc_undeformed) Line 121 C blender.exe!Object_to_mesh_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 4780 C ``` **Exact steps for others to reproduce the error** - Open [curve_bake_crash.blend](https://archive.blender.org/developer/F74047/curve_bake_crash.blend) and run the script in the text editor.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @artfunkel

Added subscriber: @artfunkel
Sergey Sharybin was assigned by Brecht Van Lommel 2014-01-23 16:04:18 +01:00

This issue was referenced by blender/blender-addons-contrib@0f72a8a7f0

This issue was referenced by blender/blender-addons-contrib@0f72a8a7f0a0f8fff11ee26859c33ab684d6e19b

This issue was referenced by 0f72a8a7f0

This issue was referenced by 0f72a8a7f0a0f8fff11ee26859c33ab684d6e19b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0f72a8a7f0.

Closed by commit 0f72a8a7f0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38337
No description provided.